<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
        android:id="@+id/q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_one"
        android:textColor="@color/black"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/q1">
        <RadioButton
            android:id="@+id/q1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq1a"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq1b"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq1c"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq1d"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_two"
        android:textColor="@color/black"
        android:layout_below="@id/rg1"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/q2">
        <RadioButton
            android:id="@+id/q2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq2a"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq2b"
            android:textAppearance="?android:textAppearanceMedium"
            />
        <RadioButton
            android:id="@+id/q2c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq2c"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q2d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq2d"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:textColor="@color/black"
        android:layout_below="@id/rg2"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <RadioGroup
        android:id="@+id/rg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/q3">
        <RadioButton
            android:id="@+id/q3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq3a"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq3b"
            android:textAppearance="?android:textAppearanceMedium"
            />
        <RadioButton
            android:id="@+id/q3c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq3c"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq3d"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/q4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_4"
        android:textColor="@color/black"
        android:layout_below="@id/rg3"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <RadioGroup
        android:id="@+id/rg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/q4">
        <RadioButton
            android:id="@+id/q4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq4a"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q4b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq4b"
            android:textAppearance="?android:textAppearanceMedium"
            />
        <RadioButton
            android:id="@+id/q4c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq4c"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q4d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq4d"
            android:textAppearance="?android:textAppearanceMedium"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/q5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_5"
        android:textColor="@color/black"
        android:layout_below="@id/rg4"
        android:textAppearance="?android:textAppearanceMedium"/>
    <RadioGroup
        android:id="@+id/rg5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/q5">
        <RadioButton
            android:id="@+id/q5a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq5a"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q5b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq5b"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q5c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq5c"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/q5d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aq5d"
            android:textAppearance="?android:textAppearanceMedium"/>
    </RadioGroup>
        <TextView
            android:id="@+id/q6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:textColor="@color/black"
            android:layout_below="@id/rg5"
            android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/chck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk"
            android:layout_below="@id/q6"
            android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/chck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chck1"
            android:text="@string/dog"
            android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/chck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chck2"
            android:text="@string/eat"
            android:textAppearance="?android:textAppearanceMedium"/>
        <CheckBox
            android:id="@+id/chck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chck3"
            android:text="@string/run"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:id="@+id/q7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            android:textColor="@color/black"
            android:layout_below="@id/chck4"
            android:textAppearance="?android:textAppearanceMedium"/>
        <EditText
            android:id="@+id/data1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/q7"
            android:hint="@string/describe"
            android:inputType="textMultiLine" />


</RelativeLayout>
</ScrollView>